MDEV-17710 "unknown error" with FLUSH LOGS if log directory is not writeable